<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="real_worked_time"
            android:title="@string/real_worked_time"
            android:summary="@string/real_worked_time_summ"
            android:defaultValue="true"/>

    <EditTextPreference
            android:key="total_hours"
            android:title="@string/total_hours"
            android:summary="@string/total_hours_sum"
            android:defaultValue="40"/>
    <ListPreference
            android:dependency="pref_sync"
            android:key="period"
            android:title="@string/period"
            android:dialogTitle="@string/period"
            android:entries="@array/period_entries"
            android:entryValues="@array/period_values"
            android:defaultValue="@string/period_default"/>
</PreferenceScreen>